--- a/src/resources/_columns_grid.css
+++ b/src/resources/_columns_grid.css
@@ -3,7 +3,7 @@
 
 	& .ck-columns__wrap {
 		display: grid;
-		gap: var(--ck-column-gap);
+		gap: var(--ck-column-gap) var(--ck-column-gap-vert);
 	}
 
 	& .ck-columns__wrap > * {
